# MailGen

./: README.md  pyproject.toml
MailGen_Live24h/: Procfile  host.py  requirements.txt
mailgen/: cli.py  live24h.py
