[project]
name = "mailgen"
version = "1.0.0"
description = "FakeMail Telegram bot automation — Kali/Linux CLI edition"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.34",
    "rich>=13.0",
    "PySocks",
    "python-socks"
]

[project.scripts]
mailgen = "mailgen.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mailgen*"]
